# zenbook-duo-daemon

./: .gitignore  Cargo.toml  README.md  install  local-overrides.quirks  org.zenbook.duo.policy  zenbook-duo-daemon-dbus.conf  zenbook-duo-daemon.service  zenbook-duo-session.service
docs/: notes-gnome-shell-notifications.md
gnome-extension/: README.md  install.sh
gnome-extension/zenbook-duo@zenbook-duo-daemon/: extension.js  metadata.json  prefs.js  stylesheet.css
scripts/: battery_checkpoint.py  battery_watch.py  listen_usb_battery.py  probe_usb_keyboard_battery.py
src/: ambient_light.rs  config.rs  daemon_socket.rs  dbus_state.rs  dwt.rs  events.rs  idle_detection.rs  keyboard_battery.rs  keyboard_battery_bt.rs  keyboard_bt.rs  keyboard_usb.rs  main.rs  mute_state.rs  polkit.rs  secondary_coordinator.rs  secondary_display.rs  session_client.rs  state.rs  unix_pipe.rs  usb_keyboard_ports.rs  virtual_keyboard.rs
src/session/: ambient.rs  display.rs  display_mode.rs  mod.rs  notifications.rs  orientation.rs  osk.rs  tablet_mapping.rs
