[package]
name = "zenbook-duo-daemon"
version = "1.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
evdev-rs = { version = "0.6.3", features = ["serde"] }
futures = "0.3.31"
inotify = { version = "0.11.0", features = ["stream"] }
log = "0.4.29"
nix = { version = "0.30.1", features = ["fs"] }
nusb = { version = "0.2.1", features = ["tokio"] }
pulseaudio = "0.3.1"
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
toml = "0.9.8"
users = "0.11.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
